# SdlWasmEngine

./: .gitignore  CMakeLists.txt  assimp.js  main.js  main.wasm  setupBeforeCompilation.bat  so my stupid ass doesn't somehow forgets build commands.txt  web_build.bat  web_release_build.bat
GameData/: dog.dae  dog.fbx  dog.glb
GameData/Shaders/: default_pixel.frag  default_vertex.vert  skeletal.vert
Lib2/: assimp-vc143-mt.lib
PlatformPlayers/UWPWebPlayer/: App.xaml  App.xaml.cs  MainPage.xaml  UWPWebPlayer.sln
PlatformPlayers/UWPWebPlayer/Properties/: AssemblyInfo.cs
PlatformPlayers/UWPWebPlayer/game/: better_index.html  main.js  main.wasm
example_1/: main.data  main.js  main.wasm
example_1/source/: main.c
example_2/source/: render.c
example_3/: main.js  main.wasm  web_build.bat
public/: main.js
source/: AssetRegistry.cpp  AssetRegisty.h  AssetRegisty.hpp  BoudingSphere.hpp  BrushFaceMesh.hpp  Camera.cpp  Camera.h  DebugDraw.cpp  DebugDraw.hpp  Delay.hpp  EObject.hpp  EngineMain.cpp  EngineMain.h  Entity.cpp  Entity.hpp  FrameDrawData.cpp  FrustrumCull.hpp  IDrawMesh.h  ImGuiEngineImpl.h  Input.cpp  Input.h  Level.cpp  Level.hpp  LevelObject.hpp  LevelObjectFactory.cpp  LevelObjectFactory.h  Logger.hpp  MapData.cpp  MapData.h  MapParser.cpp  MapParser.h  MathHelper.hpp  MeshHelper.h  MeshUtils.hpp  Physics.cpp  Physics.h  PhysicsConverter.h  RegisterLevelObject.h  SdlWasmEngine.sln  SdlWasmEngine.vcxproj  (+30 more)
source/Entities/: Player.cpp  Player.hpp  TestCube.hpp  WorldSpawn.cpp  WorldSpawn.h
source/GameData/: arms.glb  dog.gltf  monkey.fbx  testViewmodel.glb
source/GameData/Maps/: test.map
source/GameData/Shaders/: default_fragment.frag  default_pixel.frag  default_vertex.vert  empty_pixel.frag  skeletal.vert  solidRed_pixel.frag  ui.vert  ui_flatcolor.frag  ui_textured.frag
source/Navigation/: NavMeshGenerator.hpp  Navigation.cpp  Navigation.hpp  TileCacheGenerator.hpp
source/Navigation/Detour/: DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshQuery.h  DetourTileCache.cpp  DetourTileCache.h
source/SoundSystem/: SoundInstance.hpp  SoundManager.cpp  SoundManager.hpp
source/UI/: UiButton.hpp  UiCanvas.hpp  UiContentBox.hpp  UiElement.cpp  UiElement.h  UiHorizontalBox.hpp  UiImage.hpp  UiRenderer.cpp  UiRenderer.h  UiText.hpp  UiVerticalBox.hpp  UiViewport.hpp
source/imgui/: imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_widgets.cpp
temp/JoltPhysics-5.3.0/Jolt/: Jolt.cmake
temp/assimp-master/: assimp.pc  cmake_uninstall.cmake
temp/assimp-master/code/AssetLib/glTF/: glTFImporter.cpp
temp/assimp-master/include/assimp/: revision.h
